<resources>
    <string name="app_name">personalTasks</string>
    <string name="new_task">New task</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="due_date">Due date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="view_details">View details</string>
    <string name="edit_task">Edit task</string>
    <string name="remove_task">Remove task</string>
</resources>